# TraderRank

./: CHANGES.md  README.md
.claude/: settings.local.json
.claude/commands/: commit.md  docit.md
TraderRank/: CLAUDE.md  Cargo.toml
TraderRank/src/: main.rs
TraderRank/src/analytics/: metrics.rs  mod.rs  patterns.rs
TraderRank/src/models/: mod.rs  summary.rs  trade.rs
TraderRank/src/parser/: csv_parser.rs  mod.rs
TraderRank/src/persistence/: json_store.rs
TraderRank/src/visualization/: calendar.rs  charts.rs  mod.rs  tables.rs  weekly.rs
TraderRankDesktop/: Cargo.toml
TraderRankDesktop/assets/: main.css
TraderRankDesktop/plan/: ib-auto-fetch.md
TraderRankDesktop/plan/initial/: architecture.md  theme-and-css.md  views-and-metrics.md
TraderRankDesktop/src/: analytics.rs  app_dirs.rs  components.rs  data_loader.rs  flex_fetcher.rs  main.rs  models.rs  parser.rs  sample_data.rs  settings_store.rs  state.rs  theme.rs  trade_matcher.rs
TraderRankDesktop/src/views/: analytics.rs  dashboard.rs  mod.rs  settings.rs  timeline.rs  trades.rs  visual_timeline.rs
