[package]
name = "trader_rank"
version = "0.1.0"
edition = "2021"
authors = ["TraderRank Analytics Team"]
description = "Elite trading analytics engine for performance metrics and pattern recognition"

[dependencies]
calamine = "0.26"
tabled = { version = "0.16", features = ["std"] }
textplots = "0.8"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.1"
anyhow = "1.0"
thiserror = "1.0"
rust_decimal = { version = "1.36", features = ["maths", "serde"] }
rust_decimal_macros = "1.36"
