[package]
name = "trader_rank_desktop"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "trader_rank_desktop"
path = "src/main.rs"

[dependencies]
dioxus = { version = "0.6", features = ["desktop", "router"] }
rust_decimal = { version = "1.36", features = ["maths", "serde"] }
rust_decimal_macros = "1.36"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
reqwest = { version = "0.12", features = ["rustls-tls"] }
roxmltree = "0.20"
tokio = { version = "1", features = ["rt"] }
